// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Strong checkGrammar=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong checkGrammar=true 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong checkHighlight=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong checkHighlight=true 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong checkSpaces=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong checkSpaces=true 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong className="my-classname" 1`] = `
<strong
  className="uu5-bricks-strong my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong content="This is Content from ContentMixin" 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</strong>
`;

exports[`UU5.Bricks.Strong content=12345 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
>
  12345
</strong>
`;

exports[`UU5.Bricks.Strong controlled=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong controlled=true 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong default props 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong disabled=false 1`] = `
<strong
  className="uu5-bricks-strong"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong disabled=true 1`] = `
<strong
  className="uu5-bricks-strong"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong docKit examples UU5.Bricks.Strong should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    content="This is normal text"
    id="uuID02"
    key="uuID02"
  />
  <P
    id="uuID03"
    key="uuID03"
  >
    This is 
    <Strong
      id="uuID04"
    >
      important
    </Strong>
     text
  </P>
</div>
`;

exports[`UU5.Bricks.Strong dynamic=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong dynamic=true 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong hidden=false 1`] = `
<strong
  className="uu5-bricks-strong"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong hidden=true 1`] = `
<strong
  className="uu5-bricks-strong"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong id="myId" 1`] = `
<strong
  className="uu5-bricks-strong"
  id="myId"
/>
`;

exports[`UU5.Bricks.Strong ignoreHTML=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong ignoreHTML=true 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong mainAttrs=undefined 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong name="myName" 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong noIndex=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong noIndex=true 1`] = `
<strong
  className="uu5-bricks-strong uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong selected=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong selected=true 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong style="padding:8px; borderRadius: 2px" 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Strong style={"backgroundColor":"red","color":"blue"} 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Strong textCorrector=false 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong textCorrector=true 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Strong tooltip="My Tooltip" 1`] = `
<strong
  className="uu5-bricks-strong"
  id="uuID"
/>
`;
